src/objects/Apttus_Config2__TaxCertificate__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The certificate description</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The certificate description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The certificate effective date. The certificate becomes effective on this date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The certificate effective date. The certificate becomes effective on this date.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The certificate expiration date. The certificate becomes ineffective after this date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The certificate expiration date. The certificate becomes ineffective after this date.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
</CustomObject>